--- a/README.pod
+++ b/README.pod
@@ -1,3 +1,8 @@
+---
+name: typo
+description: Auto-correction plugin for Vim/Neovim
+---
+
 =pod
 
 =head1 vim-typo
@@ -8,32 +13,36 @@
 
 =end html
 
-Vim-typo is an auto-correction plugin for Vim/Neovim that relies on a syntax file to provide intelligent corrections while typing.
+Vim-typo is an auto-correction plugin for Vim/Neovim that relies
+on a syntax file to provide intelligent corrections while typing.
 
-=head2 Installation
+=head2 Installation X<typo-installation>
 
 To install vim-typo, follow the standard procedure for installing Vim plugins.
 Here is an example using [vim-jetpack](https://github.com/tani/vim-jetpack):
 
  Jetpack 'tani/vim-typo'
 
-=head2 Configuration
+=head2 Configuration X<typo-configuration>
 
-No configuration is required.
-
-To disable the autocorrection, set the buffer local variable:
+C<b:typo_did_setup> is a buffer local variable that is set to 1,
+when the autocorrection is enabled. if you want to prevent the autocorrection
+from being enabled for a specific file type, you can set this variable to 1.
+                                                       X<typo-b:typo_did_setup>
 
  autocmd FileTypoe typescript let b:typo_did_setup = 1
 
-=head2 Algorithm Overview
+=head2 Algorithm Overview X<typo-algorithm>
 
-The auto-correction algorithm used in vim-typo involves two main operations: completion and swapping.
-Typos in words, excluding the first and last letters, are corrected.
-The algorithm focuses specifically on correcting typos in words that are at least 6 characters long.
+The auto-correction algorithm used in vim-typo involves two main operations:
+completion and swapping. Typos in words, excluding the first and last letters,
+are corrected. The algorithm focuses specifically on correcting typos in words
+that are at least 6 characters long.
 
-During typing, vim-typo dynamically retrieves the word source from the syntax file, enabling on-the-fly autocorrections.
+During typing, vim-typo dynamically retrieves the word source
+from the syntax file, enabling on-the-fly autocorrections.
 
-=head2 License
+=head2 License X<typo-license>
 
 This plugin is released under the MIT License.
 (c) 2023 Masaya Taniguchi
